--- a/fotball.html
+++ b/fotball.html
@@ -9,5 +9,7 @@
     <h1>manchester city</h1>
     <h1>chelsi</h1>
     <h1>paresan jerman</h1>
+    <h1>bayern monikh</h1>
+    <h1>galataseray</h1>
 </body>
 </html>
