--- a/fotball.html
+++ b/fotball.html
@@ -9,11 +9,11 @@
     <h1>manchester city</h1>
     <h1>chelsi</h1>
     <h1>paresan jerman</h1>
-<<<<<<< HEAD
+
     <h1>bayern monikh</h1>
     <h1>galataseray</h1>
-=======
+
     <h1>Atanta</h1>
->>>>>>> ball1
+  <h1>fenerbaghche </h1>
 </body>
 </html>
